# min-btc-node

./: .gitignore  Cargo.toml  README.md  flake.nix
node/: Cargo.toml
node/src/: main.rs  protocol.rs  tui.rs
primitives/: Cargo.toml
primitives/src/: codec.rs  lib.rs  messages.rs  network.rs  transaction.rs
script-engine/: Cargo.toml
script-engine/src/: lib.rs  transaction.rs
src/: codec.rs  main.rs  messages.rs  protocol.rs  tui.rs
