[package]
name = "btc-new"
version = "0.1.0"
edition = "2024"

[dependencies]
# Runtime asynchrone et réseau TCP
tokio = { version = "1.37", features = ["net", "rt-multi-thread", "macros", "time", "io-util"] }

# Hashage cryptographique (le protocole Bitcoin utilise beaucoup le double SHA-256)
sha2 = "0.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ratatui = "0.30.2"
crossterm = "0.29.0"
clap = { version = "4.6.1", features = ["derive"] }
